crates/jabuti-core/tests/snapshots/report__measures_are_reported_for_every_unit_whatever_the_thresholds_say.snap
---
source: crates/jabuti-core/tests/report.rs
expression: rendered
---
{
  "schema": 3,
  "measures": [
    {
      "path": "src/lib.rs",
      "line": 1,
      "subject": "wide",
      "kind": "function",
      "values": {
        "lines": 3,
        "parameters": 5
      }
    }
  ],
  "unreadable": []
}
