crates/jabuti-core/tests/snapshots/report__measures_name_the_files_no_measurement_could_be_taken_from.snap
---
source: crates/jabuti-core/tests/report.rs
expression: rendered
---
{
  "schema": 3,
  "measures": [],
  "unreadable": [
    {
      "path": "src/theme.kt",
      "reason": "unreadable syntax from line 51"
    }
  ]
}
