crates/jabuti-core/tests/snapshots/report__the_json_report_carries_a_schema_a_summary_and_the_findings.snap
---
source: crates/jabuti-core/tests/report.rs
expression: rendered
---
{
  "schema": 3,
  "summary": {
    "files": 42,
    "units": 378,
    "errors": 1,
    "warnings": 0,
    "unreadable": 0
  },
  "findings": [
    {
      "rule": "function-lines",
      "severity": "error",
      "path": "src/handler.rs",
      "span": {
        "start_line": 120,
        "end_line": 130
      },
      "subject": "handle_request",
      "detail": {
        "measured": 71,
        "limit": 60
      }
    }
  ],
  "unreadable": []
}
