crates/jabuti-core/tests/snapshots/report__the_json_report_carries_every_unreadable_file_and_counts_them_in_the_summary.snap
---
source: crates/jabuti-core/tests/report.rs
expression: rendered
---
{
  "schema": 3,
  "summary": {
    "files": 42,
    "units": 378,
    "errors": 0,
    "warnings": 0,
    "unreadable": 1
  },
  "findings": [],
  "unreadable": [
    {
      "path": "src/theme.kt",
      "reason": "unreadable syntax from line 51"
    }
  ]
}
